--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,14 +47,19 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 
   assets:
-    - gramado.jpg
-    - holambra.jpg
-    - niteroi.png
-    - salvador.jpg
-    - saopaulo.jpeg
     - SATM.png
     - SATM_ICON_5.gif
     - appbar.png
+    - 8.png
+    - 9.png
+    - 10.png
+    - 11.png
+    - 12.png
+    - 13.png
+    - 14.png
+    - 15.png
+    - 16.png
+    - 17.png
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware.
