--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  dio: ^3.0.9
   gradient_app_bar: ^0.1.3
 
   # The following adds the Cupertino Icons font to your application.
